# veles

./: .editorconfig  .gitignore  Cargo.toml  Makefile  Procfile  README.md  bower.json  manage.py  requirements.txt
core/: settings.py
core/templates/: base.html
fio/: .views.py.swp  admin.py  forms.py  models.py  views.py
fio/migrations/: 0001_initial.py
reporting/: admin.py  fio.py  forms.py  models.py  views.py
reporting/migrations/: 0001_initial.py
reporting/templates/: base.html  dashboard.html
reporting/tests/: __init__.py  fio_requests.py
src/: main.rs  parser.rs
users/: forms.py  models.py  token.py  views.py
users/migrations/: 0001_initial.py  0002_user_last_sync.py  0003_auto_20160101_1617.py  0004_auto_20160101_1618.py
users/templates/registration/: login.html  registration.html
users/tests/: factories.py
utils/: auth.py
veles/: settings.py  urls.py  wsgi.py
veles/templates/: .base.html.swp  base.html
