[package]
name = "veles"
version = "0.1.0"
authors = ["Oskar Hollmann <oskar@hollmann.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"] }
log = "0.4.14"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
serde-this-or-that = "0.4"
